--- a/front-end/src/app/core/boardlist/boardlist.component.html
+++ b/front-end/src/app/core/boardlist/boardlist.component.html
@@ -44,24 +44,31 @@
               <span class="sr-only">(current)</span></a
             >
           </li>
-          <!-- <li >
-          <ng-autocomplete
-            [data]="countries"
-            [searchKeyword]="keyword"
-            placeholder="Tìm kiếm"
-            historyIdentifier="countries"
-            [itemTemplate]="itemTemplate"
-            [notFoundTemplate]="notFoundTemplate">
-          </ng-autocomplete>
-
-          <ng-template  #itemTemplate let-item>
-            <a [innerHTML]="item.name"></a>
-          </ng-template>
-
-          <ng-template  #notFoundTemplate let-notFound>
-            <div [innerHTML]="notFound"></div>
-          </ng-template>
-          </li> -->
+          <button mat-button [matMenuTriggerFor]="notifications"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-bell" viewBox="0 0 16 16">
+            <path d="M8 16a2 2 0 0 0 2-2H6a2 2 0 0 0 2 2zM8 1.918l-.797.161A4.002 4.002 0 0 0 4 6c0 .628-.134 2.197-.459 3.742-.16.767-.376 1.566-.663 2.258h10.244c-.287-.692-.502-1.49-.663-2.258C12.134 8.197 12 6.628 12 6a4.002 4.002 0 0 0-3.203-3.92L8 1.917zM14.22 12c.223.447.481.801.78 1H1c.299-.199.557-.553.78-1C2.68 10.2 3 6.88 3 6c0-2.42 1.72-4.44 4.005-4.901a1 1 0 1 1 1.99 0A5.002 5.002 0 0 1 13 6c0 .88.32 4.2 1.22 6z"/>
+          </svg></button>
+          <mat-menu #notifications="matMenu">
+              <div class="noti-menu">
+                <div *ngFor="let noti of notis" class="noti-box">
+                  <div class="noti-group">
+                    <div class="noti-task">
+                      {{ noti.task }}
+                    </div>
+                    <div>
+                      <div style="float: left;" class="font-weight-bold">{{ noti.group }}:&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; </div><div style="float: left;"> {{ noti.board }}</div>
+                    </div>
+                  </div>
+                  <div class="noti-comment">
+                    <div class="small-image" style="background-image: url({{noti.image}});"></div>
+                    <div class="font-weight-bold">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{ noti.user_name }}</div>
+                    <div class="comment">
+                      {{ noti.content }}
+                    </div>
+                  </div>
+                  <hr>
+                </div>
+              </div>
+          </mat-menu>
         </ul>
           </div>
           <a class="btn" mat-button [matMenuTriggerFor]="animals"><div
