--- a/front-end/src/app/core/boardlist/boardlist.component.css
+++ b/front-end/src/app/core/boardlist/boardlist.component.css
@@ -1,104 +1,106 @@
 .navbar {
-    background-color: #3399ff;
+  background-color: #3399ff;
 }
 
 .navbar-brand {
-    font-size: 32px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: white;
+  font-size: 32px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif;
+  color: white;
 }
 
 .navbar-brand:hover {
-    color: grey;
+  color: grey;
 }
 
 .my-group {
-    margin-top: 25px;
-    width: 100%;
-    /* height: 180px; */
-    left: 30px;
-    /* background-color: greenyellow; */
-    padding: 10px;
-    border-radius: 10px;
-    overflow: hidden;
-    border: 2px solid white;
+  margin-top: 25px;
+  width: 100%;
+  /* height: 180px; */
+  left: 30px;
+  /* background-color: greenyellow; */
+  padding: 10px;
+  border-radius: 10px;
+  overflow: hidden;
+  border: 2px solid white;
 }
 
 .my-board {
-    color: white;
-    padding-top: 5px;
-    padding-left: 10px;
-    margin-left: 10px;
-    width: 200px;
-    height: 100px;
-    float: left;
-    background-color: rgb(2, 129, 80);
-    border-radius: 10px;
-    border: 0px;
+  color: white;
+  padding-top: 5px;
+  padding-left: 10px;
+  margin-left: 10px;
+  width: 200px;
+  height: 100px;
+  float: left;
+  background-color: rgb(2, 129, 80);
+  border-radius: 10px;
+  border: 0px;
 }
 
 .add-board-button {
-    border: white;
-    margin-left: 10px;
-    width: 200px;
-    height: 100px;
-    border-radius: 10px;
-    /* background: url('https://www.ppt-backgrounds.net/thumbs/cools-iphone-slide-backgrounds.jpg') no-repeat; */
+  border: white;
+  margin-left: 10px;
+  width: 200px;
+  height: 100px;
+  border-radius: 10px;
+  /* background: url('https://www.ppt-backgrounds.net/thumbs/cools-iphone-slide-backgrounds.jpg') no-repeat; */
 }
 
 .buttonn {
-    width: 150px;
-    border: white;
-    border-radius: 5px;
-    padding: 5px 10px;
+  width: 150px;
+  border: white;
+  border-radius: 5px;
+  padding: 5px 10px;
 }
 
 #avatar {
-    border-radius: 50%;
-    width: 35px;
-    height: 35px;
-    background-size: cover;
+  border-radius: 50%;
+  width: 35px;
+  height: 35px;
+  background-size: cover;
 }
 
 .navbar {
-    background-color: #3399ff;
+  background-color: #3399ff;
 }
 
 .navbar-brand {
-    font-size: 32px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif!important;
-    color: white !important;
+  font-size: 32px;
+  font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
+    "Lucida Sans", Arial, sans-serif !important;
+  color: white !important;
 }
 
 .navbar-brand:hover {
-    color: grey!important;
+  color: grey !important;
 }
 
 #getInfo:hover {
-    color: grey!important;
+  color: grey !important;
 }
 
 #logout:hover {
-    color: white!important;
+  color: white !important;
 }
 
 .board-button {
-    float: right;
-    border: 0px rgb(2, 129, 80);
-    background-color: transparent;
-    color: white;
+  float: right;
+  border: 0px rgb(2, 129, 80);
+  background-color: transparent;
+  color: white;
 }
 
 .small-avatar {
-    width: 30px;
-    height: 30px;
-    border-radius: 50%;
-    float: left;
-    background-size: cover;
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  float: left;
+  background-size: cover;
 }
 
 #openAddBoardDialog {
-    margin-top: 15px !important;
+  margin-top: 15px !important;
 }
 /* .ng-autocomplete {
     width:100%;
@@ -107,3 +109,50 @@
     margin: 0 auto;
   }
    */
+
+.noti-group {
+  width: 255px;
+  background-color: rgb(126, 119, 230);
+  padding: 5px;
+  color: white;
+  display: inline-block;
+}
+
+.noti-task{
+  background-color: white;
+  width: 245px;
+  height: 40px;
+  border-radius: 3px;
+  color: black;
+  padding: 10px;
+}
+
+.small-image{
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  float: left;
+  background-size: cover;
+}
+
+.comment{
+  margin-top: 5px;
+  width: 235px;
+  display: inline-block;
+  border-radius: 3px;
+  padding: 10px;
+}
+
+.noti-comment{
+  width: 255px;
+  padding: 7px;
+  background-color: rgb(206, 196, 196);
+
+}
+
+.noti-box{
+  padding: 10px;
+  border-radius: 3px;
+}
+
+
