--- a/front-end/src/app/password/password.component.html
+++ b/front-end/src/app/password/password.component.html
@@ -56,9 +56,9 @@
                 <div class="mb-3">
                     <mat-form-field class="example-full-width">
                     <input matInput [type]="hide ? 'password' : 'text'" type="password" [(ngModel)]="oldPassword" name="oldPass" required  #oldPass="ngModel" [class.is-invalid]="oldPass.invalid && oldPass.touched" placeholder="Nhập mật khẩu cũ">
-                    <button mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                    <a mat-icon-button matSuffix (click)="hide = !hide" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                         <mat-icon>{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
-                        </button>
+                    </a>
                     </mat-form-field>
                     <div *ngIf="oldPass.errors && (oldPass.valid || oldPass.touched)">
                         <small class="text-danger" *ngIf="oldPass.errors.required">Mật khẩu cũ không được để trống</small>
@@ -67,9 +67,9 @@
                 <div class="mb-3">
                     <mat-form-field class="example-full-width">
                     <input matInput [type]="hide2 ? 'password' : 'text'" type="password" [(ngModel)]="newPassword" name="newPass" required pattern="[\w]+[\w]{5,}" #newPass="ngModel" [class.is-invalid]="newPass.invalid && newPass.touched" placeholder="Nhập mật khẩu mới">
-                    <button mat-icon-button matSuffix (click)="hide2 = !hide2" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                    <a mat-icon-button matSuffix (click)="hide2 = !hide2" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                         <mat-icon>{{hide2 ? 'visibility_off' : 'visibility'}}</mat-icon>
-                        </button>
+                    </a>
                     </mat-form-field>
                     <div *ngIf="newPass.errors && (newPass.valid || newPass.touched)">
                         <small class="text-danger" *ngIf="newPass.errors.required">Mật khẩu mới không được để trống</small>
@@ -79,9 +79,9 @@
                 <div class="mb-3">
                     <mat-form-field class="example-full-width">
                     <input matInput [type]="hide3 ? 'password' : 'text'" type="password" [(ngModel)]="newPasswordConfirm" name="passConfirm" required  #newPassAgain="ngModel" [class.is-invalid]="newPassAgain.invalid && newPassAgain.touched" placeholder="Nhập lại mật khẩu mới">
-                    <button mat-icon-button matSuffix (click)="hide3 = !hide3" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
+                    <a mat-icon-button matSuffix (click)="hide3 = !hide3" [attr.aria-label]="'Hide password'" [attr.aria-pressed]="hide">
                         <mat-icon>{{hide3 ? 'visibility_off' : 'visibility'}}</mat-icon>
-                        </button>
+                    </a>
                     </mat-form-field>
                     <div *ngIf="newPassAgain.errors && (newPassAgain.valid || newPassAgain.touched)">
                         <small class="text-danger" *ngIf="newPassAgain.errors.required">Mật khẩu mới không được để trống</small>
