--- a/front-end/src/app/core/column-list/column-list.component.css
+++ b/front-end/src/app/core/column-list/column-list.component.css
@@ -19,17 +19,18 @@ body {
 }
 
 .my-board {
-  width: 100%;
-  border: solid 1px white;
-  min-height: 60px;
-  display: flex;
-  flex-direction: row;
-  background: white;
-  border-radius: 4px;
-  overflow: auto;
-  float: left;
-  background-color: rgb(241, 238, 238);
+    width: 100%;
+    border: solid 1px white;
+    min-height: 60px;
+    display: flex;
+    flex-direction: row;
+    background: white;
+    border-radius: 4px;
+    overflow: auto;
+    float: left;
+    background-color: rgb(241, 238, 238);
 }
+
 #avatar {
     border-radius: 50%;
     width: 35px;
@@ -52,10 +53,10 @@ body {
 }
 
 #avatar {
-  border-radius: 50%;
-  width: 35px;
-  height: 35px;
-  background-size: cover;
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    background-size: cover;
 }
 
 .task-list.cdk-drop-list-dragging .my-task:not(.cdk-drag-placeholder) {
@@ -98,4 +99,8 @@ body {
 .add-form {
     width: 300px;
     float: right;
+}
+
+.my-task:hover {
+    background-color: whitesmoke;
 }
