--- a/front-end/src/app/core/column-list/column-list.component.html
+++ b/front-end/src/app/core/column-list/column-list.component.html
@@ -44,6 +44,7 @@
         >
       </li>
     </ul>
+               
       <a class="btn" mat-button [matMenuTriggerFor]="animals"><div
       id="avatar"
       style="background-image: url({{user.image}});"
@@ -54,6 +55,7 @@
                         <a (click)="logOut()" mat-menu-item>Đăng xuất </a>
                     </mat-menu>
         </div>
+        
     </nav>
 
 
@@ -104,6 +106,18 @@
                                 <button class="form-control btn btn-success mt-2" type="submit">Thêm cột mới</button>
                             </div>
                         </form>
+
+                        <div class="wrap">
+                            <div class="search" style="border-radius: 5px;">
+                              <input mat-button [matMenuTriggerFor]="menu" type="text" [(ngModel)]="term" class="search-menu" placeholder="Nhập để tìm kiếm">
+                            </div>
+                                <mat-menu #menu="matMenu" class="search-menu">
+                            <div *ngFor="let item of items | filter:term" style="border: solid 1px black; height: 50px; margin-left: 5px; margin-right: 5px; background-color:{{item.label}};">
+                                <p style="color:white;">{{ item.title }} </p>
+                            </div>
+                              </mat-menu>
+                                   </div>
+                                   
                     </div>
 
                 </div>
