--- a/front-end/src/app/core/column-list/column-list.component.html
+++ b/front-end/src/app/core/column-list/column-list.component.html
@@ -68,42 +68,45 @@
                 <div>
                     <div cdkDropList [cdkDropListData]="column.tasks" class="task-list" (cdkDropListDropped)="dropTask($event,column.column.id,column.column.name)">
                         <div style="border-radius: 2%; height: 50px;" class="my-task mt-2 shadow p-2 mb-2" *ngFor="let task of column.tasks" cdkDrag>
+                            <label style="background-color: {{task.label}}">
+                                &nbsp;&nbsp;
+                            </label>
                             <div class="task-box">
-                                <div class="float-right">
-                                    <p style="padding: 6px 8px">{{ task.title }}</p>
+                                <div class="float-right ">
+                                    <p style="padding: 6px 8px ">{{ task.title }}</p>
                                 </div>
                             </div>
-                            <div class="task-box">
-                                <div class="float-left">
-                                    <button class="btn" (click)="openUploadDialog(task.id)"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-paperclip" viewBox="0 0 16 16">
-                                    <path d="M4.5 3a2.5 2.5 0 0 1 5 0v9a1.5 1.5 0 0 1-3 0V5a.5.5 0 0 1 1 0v7a.5.5 0 0 0 1 0V3a1.5 1.5 0 1 0-3 0v9a2.5 2.5 0 0 0 5 0V5a.5.5 0 0 1 1 0v7a3.5 3.5 0 1 1-7 0V3z"/>
+                            <div class="task-box ">
+                                <div class="float-left ">
+                                    <button class="btn " (click)="openUploadDialog(task.id) "><svg xmlns="http://www.w3.org/2000/svg " width="16 " height="16 " fill="currentColor " class="bi bi-paperclip " viewBox="0 0 16 16 ">
+                                    <path d="M4.5 3a2.5 2.5 0 0 1 5 0v9a1.5 1.5 0 0 1-3 0V5a.5.5 0 0 1 1 0v7a.5.5 0 0 0 1 0V3a1.5 1.5 0 1 0-3 0v9a2.5 2.5 0 0 0 5 0V5a.5.5 0 0 1 1 0v7a3.5 3.5 0 1 1-7 0V3z "/>
                                   </svg></button>
-                                    <button class="btn" (click)="openCommentDialog(task.id)"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-filter-right" viewBox="0 0 16 16">
-                                    <path d="M14 10.5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0 0 1h3a.5.5 0 0 0 .5-.5zm0-3a.5.5 0 0 0-.5-.5h-7a.5.5 0 0 0 0 1h7a.5.5 0 0 0 .5-.5zm0-3a.5.5 0 0 0-.5-.5h-11a.5.5 0 0 0 0 1h11a.5.5 0 0 0 .5-.5z"/>
+                                    <button class="btn " (click)="openCommentDialog(task.id) "><svg xmlns="http://www.w3.org/2000/svg " width="20 " height="20 " fill="currentColor " class="bi bi-filter-right " viewBox="0 0 16 16 ">
+                                    <path d="M14 10.5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0 0 1h3a.5.5 0 0 0 .5-.5zm0-3a.5.5 0 0 0-.5-.5h-7a.5.5 0 0 0 0 1h7a.5.5 0 0 0 .5-.5zm0-3a.5.5 0 0 0-.5-.5h-11a.5.5 0 0 0 0 1h11a.5.5 0 0 0 .5-.5z "/>
                                   </svg></button>
                                 </div>
                             </div>
                         </div>
 
-                        <div class="mt-2">
-                            <form (ngSubmit)="addTask(column.column.id)">
-                                <input placeholder="Thêm thẻ mới..." [(ngModel)]="newtask.title" name="title" class="form-control" type="text">
-                                <button class="form-control btn btn-success mt-1">Thêm thẻ</button>
+                        <div class="mt-2 ">
+                            <form (ngSubmit)="addTask(column.column.id) ">
+                                <input placeholder="Thêm thẻ mới... " [(ngModel)]="newtask.title " name="title " class="form-control " type="text ">
+                                <button class="form-control btn btn-success mt-1 ">Thêm thẻ</button>
                             </form>
                         </div>
                     </div>
 
                 </div>
             </div>
-            <div style="min-width: 250px;" class="mt-3 ml-4 add-form">
-                <div style="border: 0px;" class="shadow">
+            <div style="min-width: 250px; " class="mt-3 ml-4 add-form ">
+                <div style="border: 0px; " class="shadow ">
                     <div my-column>
-                        <form (ngSubmit)="addColumn()">
+                        <form (ngSubmit)="addColumn() ">
                             <div>
-                                <input class="form-control" [(ngModel)]="column.name" name="name" />
+                                <input class="form-control " [(ngModel)]="column.name " name="name " />
                             </div>
                             <div>
-                                <button class="form-control btn btn-success mt-2" type="submit">Thêm cột mới</button>
+                                <button class="form-control btn btn-success mt-2 " type="submit ">Thêm cột mới</button>
                             </div>
                         </form>
                     </div>
@@ -116,9 +119,9 @@
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js " integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo " crossorigin="anonymous "></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js " integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1 " crossorigin="anonymous "></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js " integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM " crossorigin="anonymous "></script>
 </body>
 
 </html>
