--- a/front-end/src/app/core/column-list/column-list.component.html
+++ b/front-end/src/app/core/column-list/column-list.component.html
@@ -64,7 +64,7 @@
         <div style="background-color: #1273ac; border: 0px; margin-top: 100px;" cdkDropList cdkDropListGroup cdkDropListOrientation="horizontal" class="my-board" (cdkDropListDropped)="dropColumn($event)">
             <div style="background-color: gainsboro; border-radius: 5px;" class="mt-3 ml-4 shadow p-2 mb-2 example-box" *ngFor="let column of columns" cdkDrag>
                 <div class="title">
-                    <button *ngIf="showInput !== column.column.id" class="btn form-control" style="border: 0px;" (click)="showEditNameInput(column.column.id)"> <b style="font-size: 20px;">{{ column.column.name }}</b> </button>
+                    <button *ngIf="showInput !== column.column.id" class="btn form-control" style="border: 0px; text-align: left;" (click)="showEditNameInput(column.column.id)"> <b style="font-size: 20px;">{{ column.column.name }}</b> </button>
                     <form [hidden]="showInput !== column.column.id">
                         <input (keydown.enter)="changeNameList(column.column.id)" type="text" [(ngModel)]="myColumn.name" name="name" class="form-control">
                     </form>
