--- a/front-end/src/app/core/column-list/column-list.component.css
+++ b/front-end/src/app/core/column-list/column-list.component.css
@@ -1,13 +1,12 @@
-::ng-deep .searchTerm{
-    background:white;
+::ng-deep .searchTerm {
+    background: white;
     width: fit-content;
 }
 
 ::ng-deep .search-menu {
-    background:white;
+    background: white;
     width: 400px;
-  }
-
+}
 
 body {
     background-color: #1273ac;
@@ -94,19 +93,25 @@ body {
 }
 
 .my-task {
-    padding: 20px 10px;
-    border-bottom: solid 1px #ccc;
-    color: rgba(0, 0, 0, 0.87);
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-between;
-    box-sizing: border-box;
-    /* cursor: move; */
-    background: white;
-    font-size: 14px;
-    height: 60px;
-    max-height: 100%;
+    background-color: #fff;
+    border-radius: 3px;
+    box-shadow: 0 1px 0 rgba(9, 45, 66, .25);
+    padding: 10px 10px;
+    margin-bottom: 8px;
+    max-width: 100%!important;
+    position: relative;
+    text-decoration: none;
+    z-index: 0;
+    border: 5px;
+    box-sizing: border-box
+}
+
+.task-details {
+    overflow: hidden;
+    padding: 6px 8px;
+    position: relative;
+    z-index: 10;
+    display: block;
 }
 
 .add-form {
@@ -118,11 +123,11 @@ body {
     background-color: whitesmoke;
 }
 
-.example-box{
-  width: 350px;
+.example-box {
+    width: 350px;
 }
 
-.task-box{
-  height: 100px;
-  max-height: 100%;
+.task-box {
+    height: 100px;
+    max-height: 100%;
 }
