--- a/front-end/src/app/core/column-list/column-list.component.html
+++ b/front-end/src/app/core/column-list/column-list.component.html
@@ -12,50 +12,31 @@
 </head>
 
 <body>
-  <app-mynavbar></app-mynavbar>
+    <app-mynavbar></app-mynavbar>
     <div>
         <div style="background-color: #1273ac; border: 0px; margin-top: 100px;" cdkDropList cdkDropListGroup cdkDropListOrientation="horizontal" class="my-board" (cdkDropListDropped)="dropColumn($event)">
             <div style="background-color: gainsboro; border-radius: 5px;" class="mt-3 ml-4 shadow p-2 mb-2 example-box" *ngFor="let column of columns" cdkDrag>
                 <div class="title">
-                    <button *ngIf="showInput !== column.column.id" class="btn form-control" style="border: 0px;" (click)="showEditNameInput(column.column.id)"> <b style="font-size: 20px;">{{ column.column.name }}</b> </button>
+                    <button *ngIf="showInput !== column.column.id" class="btn form-control" style="border: 0px;cursor: text;" (click)="showEditNameInput(column.column.id)"> <b style="font-size: 20px;">{{ column.column.name }}</b> </button>
                     <form [hidden]="showInput !== column.column.id">
                         <input (keydown.enter)="changeNameList(column.column.id)" type="text" [(ngModel)]="myColumn.name" name="name" class="form-control">
                     </form>
                 </div>
-                <div>
-                    <div cdkDropList [cdkDropListData]="column.tasks" class="task-list" (cdkDropListDropped)="dropTask($event,column.column.id,column.column.name)">
-                        <div style="border-radius: 2%; height: 50px;" class="my-task mt-2 shadow p-2 mb-2" *ngFor="let task of column.tasks" cdkDrag>
-                            <label style="background-color: {{task.label}}">
-                                &nbsp;&nbsp;
-                            </label>
-                            <div class="task-box">
-                                <div class="float-right ">
-                                    <p style="padding: 6px 8px ">{{ task.title }}</p>
-                                </div>
-                            </div>
-                            <div class="task-box ">
-                                <div class="float-left ">
-                                    <button class="btn " (click)="openUploadDialog(task.id) "><svg xmlns="http://www.w3.org/2000/svg " width="16 " height="16 " fill="currentColor " class="bi bi-paperclip " viewBox="0 0 16 16 ">
-                                    <path d="M4.5 3a2.5 2.5 0 0 1 5 0v9a1.5 1.5 0 0 1-3 0V5a.5.5 0 0 1 1 0v7a.5.5 0 0 0 1 0V3a1.5 1.5 0 1 0-3 0v9a2.5 2.5 0 0 0 5 0V5a.5.5 0 0 1 1 0v7a3.5 3.5 0 1 1-7 0V3z "/>
-                                  </svg></button>
-                                    <button class="btn " (click)="openCommentDialog(task.id) "><svg xmlns="http://www.w3.org/2000/svg " width="20 " height="20 " fill="currentColor " class="bi bi-filter-right " viewBox="0 0 16 16 ">
-                                    <path d="M14 10.5a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 0 0 1h3a.5.5 0 0 0 .5-.5zm0-3a.5.5 0 0 0-.5-.5h-7a.5.5 0 0 0 0 1h7a.5.5 0 0 0 .5-.5zm0-3a.5.5 0 0 0-.5-.5h-11a.5.5 0 0 0 0 1h11a.5.5 0 0 0 .5-.5z "/>
-                                  </svg></button>
-                                </div>
-                            </div>
-                        </div>
-                        <button (click)="clickTaskButton(column.column.id)" *ngIf="showAddTask !== column.column.id" class="btn btn-success form-control"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+                <div cdkDropList [cdkDropListData]="column.tasks" class="task-list" (cdkDropListDropped)="dropTask($event,column.column.id,column.column.name)">
+                    <div (click)="openCommentDialog(task.id)" style="overflow: hidden;border-radius: 3px; height: 50px; border-left: 10px solid {{ task.label }};" class="my-task mt-2 shadow p-2 mb-2" *ngFor="let task of column.tasks" cdkDrag>
+                        {{ task.title }}
+                    </div>
+                    <button (click)="clickTaskButton(column.column.id)" *ngIf="showAddTask !== column.column.id" class="btn btn-success form-control"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
                           <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
                         </svg> Thêm thẻ mới </button>
-                        <div *ngIf="showAddTask == column.column.id" class="mt-2">
-                            <form (ngSubmit)="addTask(column.column.id)">
-                                <input [(ngModel)]="newtask.title" name="title" class="form-control" type="text">
-                                <button style="width: 250px;" class="form-control btn btn-success mt-1">Thêm thẻ</button>
-                                <a (click)="closeForm()"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                    <div *ngIf="showAddTask == column.column.id" class="mt-2">
+                        <form (ngSubmit)="addTask(column.column.id)">
+                            <input [(ngModel)]="newtask.title" name="title" class="form-control" type="text">
+                            <button style="width: 250px;" class="form-control btn btn-success mt-1">Thêm thẻ</button>
+                            <a (click)="closeForm()"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
                                   <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
                                 </svg></a>
-                            </form>
-                        </div>
+                        </form>
                     </div>
                 </div>
             </div>
