--- a/front-end/src/app/core/column-list/column-list.component.css
+++ b/front-end/src/app/core/column-list/column-list.component.css
@@ -131,3 +131,11 @@ body {
     height: 100px;
     max-height: 100%;
 }
+
+#addTask:hover {
+    background-color: rgb(178, 185, 178)!important;
+}
+
+#addColumn:hover {
+    background-color: rgb(178, 185, 178)!important;
+}
