--- a/front-end/src/app/core/column-list/column-list.component.html
+++ b/front-end/src/app/core/column-list/column-list.component.html
@@ -26,12 +26,12 @@
                     <div (click)="openCommentDialog(task.id)" style="overflow: hidden;border-radius: 3px; height: 50px; border-left: 10px solid {{ task.label }};" class="my-task mt-2 shadow p-2 mb-2" *ngFor="let task of column.tasks" cdkDrag>
                         {{ task.title }}
                     </div>
-                    <button (click)="clickTaskButton(column.column.id)" *ngIf="showAddTask !== column.column.id" class="btn btn-success form-control"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+                    <button id="addTask" style="background-color: gainsboro;" (click)="clickTaskButton(column.column.id)" *ngIf="showAddTask !== column.column.id" class="btn  form-control"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
                           <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
                         </svg> Thêm thẻ mới </button>
                     <div *ngIf="showAddTask == column.column.id" class="mt-2">
                         <form (ngSubmit)="addTask(column.column.id)">
-                            <input [(ngModel)]="newtask.title" name="title" class="form-control" type="text">
+                            <input placeholder="Nhập tên thẻ.." [(ngModel)]="newtask.title" name="title" class="form-control" type="text">
                             <button style="width: 250px;" class="form-control btn btn-success mt-1">Thêm thẻ</button>
                             <a (click)="closeForm()"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
                                   <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
@@ -40,18 +40,32 @@
                     </div>
                 </div>
             </div>
-            <div style="min-width: 250px; " class="mt-3 ml-4 add-form ">
-                <div style="border: 0px; " class="shadow ">
-                    <div my-column>
+            <div style="min-width: 250px; " class="mt-2 ml-4 add-form ">
+                <div style="border: 0px;">
+                    <div *ngIf="add_column === false" my-column>
+                        <button id="addColumn" style="background-color: gainsboro; color: black;" (click)="openAddColumn()" class="form-control btn mt-2 " type="submit ">
+                            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-plus" viewBox="0 0 16 16">
+                                <path d="M8 4a.5.5 0 0 1 .5.5v3h3a.5.5 0 0 1 0 1h-3v3a.5.5 0 0 1-1 0v-3h-3a.5.5 0 0 1 0-1h3v-3A.5.5 0 0 1 8 4z"/>
+                              </svg> Thêm cột mới</button>
+                    </div>
+                    <div *ngIf="add_column === true" my-column>
                         <form (ngSubmit)="addColumn() ">
                             <div>
-                                <input class="form-control " [(ngModel)]="column.name " name="name " />
+                                <input placeholder="Nhập tên cột.." class="form-control " [(ngModel)]="column.name " name="name " />
                             </div>
-                            <div>
-                                <button class="form-control btn btn-success mt-2 " type="submit ">Thêm cột mới</button>
+                            <div class="row">
+                                <div class="col-6">
+                                    <button class="btn btn-success mt-2 " type="submit ">Thêm</button>
+                                </div>
+                                <div class="col-6">
+                                    <button class="btn" (click)="closedAddColumn()"><svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="currentColor" class="bi bi-x" viewBox="0 0 16 16">
+                                    <path d="M4.646 4.646a.5.5 0 0 1 .708 0L8 7.293l2.646-2.647a.5.5 0 0 1 .708.708L8.707 8l2.647 2.646a.5.5 0 0 1-.708.708L8 8.707l-2.646 2.647a.5.5 0 0 1-.708-.708L7.293 8 4.646 5.354a.5.5 0 0 1 0-.708z"/>
+                                  </svg></button>
+                                </div>
                             </div>
-                        </form>
 
+                        </form>
+                        <!-- 
                         <div class="wrap">
                             <div class="search" style="border-radius: 5px;">
                                 <input mat-button [matMenuTriggerFor]="menu" type="text" [(ngModel)]="term" class="search-menu" placeholder="Nhập để tìm kiếm">
@@ -61,7 +75,7 @@
                                     <p style="color:white;">{{ item.title }} </p>
                                 </div>
                             </mat-menu>
-                        </div>
+                        </div> -->
 
                     </div>
 
