almost done board & card search

--- a/front-end/src/app/core/boardlist/boardlist.component.css
+++ b/front-end/src/app/core/boardlist/boardlist.component.css
@@ -48,5 +48,16 @@
   color: white;
 }
 
+::ng-deep .searchTerm{
+  background:white;
+  width: fit-content;
+}
+
+::ng-deep .search-menu {
+  background:white;
+  width: 250px;
+}
+
+
 
 
