--- a/front-end/src/app/core/column-list/column-list.component.html
+++ b/front-end/src/app/core/column-list/column-list.component.html
@@ -75,8 +75,8 @@
                 <input mat-button [matMenuTriggerFor]="menu" type="text" [(ngModel)]="term" class="search-menu" placeholder="Nhập để tìm kiếm">
             </div>
             <mat-menu #menu="matMenu" class="search-menu">
-                <div *ngFor="let item of items | filter:term" style="border: solid 1px black; height: 50px; margin-left: 5px; margin-right: 5px; background-color:{{item.label}};">
-                    <p style="color:white;">{{ item.title }} </p>
+                <div *ngFor="let item of items | filter:term" style="border: solid 1px black;text-align: center; height: 50px; margin-left: 5px; margin-right: 5px; background-color:{{item.label}};">
+                    <button style="color:white; background-color: transparent; border: none;" (click)="openCommentDialog(item.id)">{{ item.title }} </button>
                 </div>
             </mat-menu>
         </div>
