--- a/front-end/src/app/core/column-list/comment-dialog.html
+++ b/front-end/src/app/core/column-list/comment-dialog.html
@@ -35,7 +35,7 @@
 </div>
 <br>
 <div style="float: right;">
-    <button class="btn btn-danger" (click)="deleteTask(data.task_id)">Xoá thẻ</button>
+    <button class="btn btn-danger" (click)="deleteTask()">Xoá thẻ</button>
 </div>
 <br>
 <br>
