--- a/front-end/src/app/core/profile/profile/profile.component.css
+++ b/front-end/src/app/core/profile/profile/profile.component.css
@@ -1,25 +1,66 @@
-#page-header {
-    width: 100%;
-    height: 200px;
-    background-color: rgb(236, 233, 233);
-    text-align: center;
-    border-bottom: solid 1px rgb(199, 195, 195);
+.small-avatar {
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    float: left;
+    background-size: cover;
 }
 
-#page-body {
-    text-align: center;
+#openAddBoardDialog {
+    margin-top: 15px !important;
 }
 
-#property {
-    width: 50%;
-    left: 25%;
-    position: relative;
-    text-align: center;
+
+/* .ng-autocomplete {
+    width:100%;
+    max-width: 600px;
+    display: table;
+    margin: 0 auto;
+  }
+   */
+
+.noti-group {
+    width: 255px;
+    background-color: rgb(126, 119, 230);
+    padding: 5px;
+    color: white;
+    display: inline-block;
 }
 
-.error {
-    padding: 12px;
-    color: red;
+.noti-task {
+    background-color: white;
+    width: 245px;
+    height: 60px;
+    border-radius: 3px;
+    color: black;
+    padding: 5px;
+}
+
+.small-image {
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    float: left;
+    background-size: cover;
+}
+
+.comment {
+    margin-top: 5px;
+    width: 235px;
+    display: inline-block;
+    border-radius: 3px;
+    padding: 10px;
+}
+
+.noti-comment {
+    width: 255px;
+    padding: 7px;
+    background-color: rgb(206, 196, 196);
+}
+
+.noti-box {
+    padding: 10px;
+    border-radius: 3px;
 }
 
 .navbar {
@@ -27,58 +68,46 @@
 }
 
 .navbar-brand {
-    font-size: 32px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    color: white;
+    font-size: 32px!important;
+    font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande", "Lucida Sans", Arial, sans-serif;
+    color: white!important;
 }
 
 .navbar-brand:hover {
-    color: grey;
+    color: grey!important;
 }
 
-#navbar-login {
-    font-family: sans-serif;
-    font-size: 18px;
+#noti {
+    color: white!important;
 }
 
-#navbar-login:hover {
-    color: grey !important;
+#noti:hover {
+    color: grey!important;
 }
 
-#navbar-sign {
-    font-family: sans-serif;
-    width: 120px;
-    color: #3399ff;
-    font-size: 18px;
-}
-
-#navbar-sign:hover {
-    color: grey;
-    background-color: #3399ff !important;
-}
-
-#content-1 {
-    background-color: lightblue;
-}
-
-#try-it {
-    font-family: sans-serif;
-    font-size: 25px;
-    background-color: #3399ff;
+#home {
     color: white;
 }
 
-#try-it:hover {
-    background-color: lightskyblue;
+#home:hover {
     color: grey;
 }
 
-h1 {
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    font-size: 50px;
+#avatar {
+    border-radius: 50%;
+    width: 35px;
+    height: 35px;
+    background-size: cover;
 }
 
-p {
-    font-family: sans-serif;
-    font-size: 18px;
+#getInfo:hover {
+    color: grey !important;
+}
+
+#logout:hover {
+    color: white !important;
+}
+
+#changePass:hover {
+    color: rgb(5, 163, 226)!important;
 }
