added group search

--- a/front-end/src/app/core/column-list/column-list.component.css
+++ b/front-end/src/app/core/column-list/column-list.component.css
@@ -1,6 +1,6 @@
-::ng-deep .searchTerm {
+::ng-deep .mat-menu-panel {
     background: white;
-    width: fit-content;
+    width: 400px;
 }
 
 ::ng-deep .search-menu {
