--- a/front-end/src/app/core/boardlist/boardlist.component.css
+++ b/front-end/src/app/core/boardlist/boardlist.component.css
@@ -46,9 +46,21 @@
     color: white;
 }
 
+
+::ng-deep .searchTerm{
+  background:white;
+  width: fit-content;
+}
+
+::ng-deep .search-menu {
+  background:white;
+  width: 250px;
+}
+
 #addBoard:hover {
     background-color: rgb(178, 185, 178)!important;
 }
+
 
 .small-avatar {
     width: 30px;
