--- a/front-end/src/app/core/mynavbar/mynavbar.component.html
+++ b/front-end/src/app/core/mynavbar/mynavbar.component.html
@@ -56,6 +56,16 @@
         </div>
     </mat-menu>
   </ul>
+  <div class="wrap">
+    <div class="search" style="border-radius: 5px;">
+        <input mat-button [matMenuTriggerFor]="menu" type="text" [(ngModel)]="term" class="search-menu" placeholder="Nhập để tìm kiếm bảng">
+    </div>
+    <mat-menu #menu="matMenu" class="search-menu">
+        <div *ngFor="let item of items | filter:term" style="border: solid 1px black; height: 50px; margin-left: 5px; margin-right: 5px; background-color:white; background-image: url('{{item.background}}');">
+            <a href="http://localhost:4200/board/{{item.id}}" style="color:black; text-shadow: wheat;">{{ item.name }} </a>
+        </div>
+    </mat-menu>
+</div>
     </div>
     <a class="btn" mat-button [matMenuTriggerFor]="animals"><div
     id="avatar"
