fixed search all function

--- a/front-end/src/app/core/column-list/column-list.component.css
+++ b/front-end/src/app/core/column-list/column-list.component.css
@@ -1,6 +1,12 @@
 ::ng-deep .mat-menu-panel {
-    background: white;
-    width: 400px;
+    min-width: 112px;
+    max-width: 407px;
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
+    max-height: calc(100vh - 48px);
+    border-radius: 4px;
+    outline: 0;
+    min-height: 64px;
 }
 
 ::ng-deep .search-menu {
