--- a/front-end/src/app/core/profile/profile/changepass-dialog.html
+++ b/front-end/src/app/core/profile/profile/changepass-dialog.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+<!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
 <h1 style="text-align: center;">Đổi mật khẩu</h1>
 <div style="text-align: center; clear" class="mt-5">
     <form #pass="ngForm">
@@ -44,4 +44,4 @@
         <br>
         <button class="btn btn-link" mat-dialog-close>Huỷ bỏ</button>
     </form>
-</div>
+</div> -->
