--- a/front-end/src/app/core/column-list/column-list.component.css
+++ b/front-end/src/app/core/column-list/column-list.component.css
@@ -4,7 +4,7 @@
     overflow: auto;
     -webkit-overflow-scrolling: touch;
     max-height: calc(100vh - 48px);
-    border-radius: 4px;
+    border-radius: 4px ;
     outline: 0;
     min-height: 64px;
 }
@@ -12,6 +12,8 @@
 ::ng-deep .search-menu {
     background: white;
     width: 400px;
+    border-radius: 10px !important;
+    border: none !important;
 }
 
 body {
